# red4ext-rs

./: .gitignore  .gitmodules  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  LICENSE  README.md  build.rs  crates.js  help.html  justfile  search-index.js  settings.html  src-files.js
.cargo/: config.toml
.github/workflows/: ci.yml  update-submodule.yml
const_combine/: all.html  index.html  macro.const_combine!.html  macro.const_combine.html  macro.const_combine_bounded!.html  macro.const_combine_bounded.html  macro.const_combine_bounded_with!.html  macro.const_combine_bounded_with.html  sidebar-items.js
const_combine/bounded/: index.html  macro.const_combine.html  macro.const_combine_with_len!.html  macro.const_combine_with_len.html  sidebar-items.js
const_combine/internal/: fn.combine.html  fn.copy_slice.html  fn.take_n.html  index.html  sidebar-items.js
const_crc32/: all.html  fn.crc32.html  fn.crc32_seed.html  index.html  sidebar-items.js
doc/: how-to.md
example/: Cargo.toml
example/reds/: ForgetArgs.reds  Natives.reds
example/src/: board.rs  forget_args.rs  lib.rs
examples/: example.rs  exports.rs  to_lowercase.rs
examples/hello_world/: Cargo.toml  justfile
examples/menu_button/: Cargo.toml  justfile
examples/player_info/: Cargo.toml  justfile
examples/player_info/reds/: DumpPlayerInfo.reds
examples/player_info/src/: lib.rs
examples/trait_plugin/: Cargo.toml
heck/: all.html  index.html  struct.AsKebabCase.html  struct.AsLowerCamelCase.html  struct.AsPascalCase.html  struct.AsShoutyKebabCase.html  struct.AsShoutySnakeCase.html  struct.AsShoutySnekCase.html  struct.AsSnakeCase.html  struct.AsSnekCase.html  struct.AsTitleCase.html  struct.AsTrainCase.html  struct.AsUpperCamelCase.html  trait.ToKebabCase.html  trait.ToLowerCamelCase.html  trait.ToPascalCase.html  trait.ToShoutyKebabCase.html  trait.ToShoutySnakeCase.html  trait.ToShoutySnekCase.html  trait.ToSnakeCase.html  trait.ToSnekCase.html  trait.ToTitleCase.html  trait.ToTrainCase.html  trait.ToUpperCamelCase.html
proc_macro2/: enum.TokenTree.html  struct.Ident.html  struct.TokenStream.html
proc_macro2/token_stream/: struct.IntoIter.html
quote/: trait.IdentFragment.html  trait.ToTokens.html
red4ext/: Cargo.toml
red4ext-macros/: Cargo.toml
red4ext-macros/src/: lib.rs
red4ext-sys/: Cargo.toml  build.rs
red4ext-sys/cpp/glue/: glue.hpp
red4ext-sys/src/: crc32_table.rs  error.rs  interop.rs  lib.rs  macros.rs
red4ext-types/: Cargo.toml
red4ext-types/src/: lib.rs
red4ext/examples/: example.rs
red4ext/src/: builder.rs  conv.rs  downcast.rs  error.rs  invocable.rs  invokable.rs  lib.rs  logger.rs  plugin.rs  prelude.rs  rtti.rs  types.rs
red4ext_rs/: all.html  enum.InvokeError.html  enum.StateType.html  index.html  macro.call.html  macro.debug.html  macro.error.html  macro.export_plugin.html  macro.export_plugin_symbols!.html  macro.export_plugin_symbols.html  macro.exports!.html  macro.exports.html  macro.global.html  macro.hooks!.html  macro.hooks.html  macro.info.html  macro.method.html  macro.methods!.html  macro.methods.html  macro.res_ref!.html  macro.res_ref.html  macro.static_methods!.html  macro.static_methods.html  macro.trace.html  macro.warn.html  macro.wcstr!.html  macro.wcstr.html  sidebar-items.js  struct.ApiVersion.html  struct.ClassExport.html  struct.ClassExportBuilder.html  struct.ExportList.html  struct.ExportNil.html  struct.FnType.html  struct.FunctionType.html  struct.GameApp.html  struct.GlobalExport.html  struct.GlobalMetadata.html  struct.Hook.html  struct.MethodMetadata.html  (+27 more)
red4ext_rs/addr_hashes/: constant.Allocator_CreateResource.html  constant.BasePackageReader_ReadHeader.html  constant.CBaseFunction_ExecuteNative.html  constant.CBaseFunction_ExecuteScripted.html  constant.CBaseFunction_Handlers.html  constant.CBaseFunction_InternalExecute.html  constant.CBaseRTTIType_sub_80.html  constant.CBaseRTTIType_sub_88.html  constant.CBaseRTTIType_sub_90.html  constant.CBaseRTTIType_sub_98.html  constant.CBaseRTTIType_sub_A0.html  constant.CBitfield_FromString.html  constant.CBitfield_ToString.html  constant.CBitfield_Unserialize.html  constant.CClassFunction_ctor.html  constant.CClassStaticFunction_ctor.html  constant.CClass_AssignDefaultValuesToProperties.html  constant.CClass_ClearScriptedData.html  constant.CClass_CreateInstance.html  constant.CClass_GetMaxAlignment.html  constant.CClass_GetProperties.html  constant.CClass_GetProperty.html  constant.CClass_ToString.html  (+107 more)
sealed/: all.html  attr.sealed.html  index.html  sidebar-items.js
src/: class.rs  export.rs  function.rs  interop.rs  invocable.rs  lib.rs  logger.rs  plugin.rs  prelude.rs  raw.rs  register.rs  repr.rs  rtti.rs  systems.rs  tracing.rs  types.rs
syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.Data.html  enum.Expr.html  enum.FieldMutability.html  enum.Fields.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericArgument.html  enum.GenericParam.html  enum.ImplItem.html  enum.ImplRestriction.html  enum.Item.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.Pat.html  enum.PathArguments.html  enum.RangeLimits.html  enum.ReturnType.html  enum.StaticMutability.html  enum.Stmt.html  enum.TraitBoundModifier.html  enum.TraitItem.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.UseTree.html  enum.Visibility.html  enum.WherePredicate.html  fn.parse.html  fn.parse2.html  fn.parse_file.html  fn.parse_str.html  index.html  macro.Token.html  macro.braced.html  macro.bracketed.html  (+167 more)
thiserror/: all.html  derive.Error.html  index.html
thiserror_impl/: all.html  derive.Error.html  index.html
widestring/: all.html  fn.decode_utf16.html  fn.decode_utf16_lossy.html  fn.decode_utf32.html  fn.decode_utf32_lossy.html  fn.encode_utf16.html  fn.encode_utf32.html  fn.encode_utf8.html  index.html  macro.include_utf16str.html  macro.u16cstr.html  macro.u16str.html  macro.u32cstr.html  macro.u32str.html  macro.utf16str.html  macro.utf32str.html  macro.widecstr.html  macro.widestr.html  macro.wideutfstr.html  type.WideChar.html
(+1097 files in other folders)
