[package]
name = "red4rs"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
once_cell = "1"
widestring = "1"
const-crc32 = "1"

[build-dependencies]
bindgen = { version = "0.69", features = ["experimental"] }
cmake = "0.1"

[lints.rust]
warnings = "warn"
future-incompatible = "warn"
let-underscore = "warn"
nonstandard-style = "warn"
rust-2018-compatibility = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
match_same_arms = "warn"
single_match_else = "warn"
redundant_closure_for_method_calls = "warn"
cloned_instead_of_copied = "warn"
redundant_else = "warn"
unnested_or_patterns = "warn"
type_repetition_in_bounds = "warn"
equatable_if_let = "warn"
implicit_clone = "warn"
explicit_deref_methods = "warn"
explicit_iter_loop = "warn"
inefficient_to_string = "warn"
match_bool = "warn"
