[package]
name = "red4ext-example"
version = "0.0.0"
rust-version = "1.72"
edition = "2021"
license = "MIT"
authors = ["jekky"]

[lib]
crate-type = ["cdylib"]
name = "example"

[dependencies]
red4ext-rs = { path = "../red4ext", features = ["macros"] }

[profile.release]
lto = "thin"

[features]
default = ["codeware"]
codeware = []
