[package]
name = "red4ext-types"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "1"
num_enum = { version = "0.7", default-features = false }
cxx = "1"
const-crc32 = "1"

[lints]
workspace = true
