[package]
name = "red4ext-rs"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = "1"
once_cell = "1"
wchar = "0.11"
const-combine = { git = "https://github.com/jac3km4/const-combine", rev = "v0.1.4" }

red4ext-sys = { path = "../red4ext-sys" }
red4ext-macros = { path = "../red4ext-macros", optional = true }

[features]
macros = ["dep:red4ext-macros"]
